Modernization of Options, setSocketOpt is much more lenient.